# paralleli

./: CMakeLists.txt  main.cu
include/: array.h  experiments.h  kernels.cuh  mds.h  memory_section.h  orthotope.h  paralleli.h  pls.h
